--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 </div>
                 <button class="complete-order-btn">complete order</button>
             </div>
+            <div class="bottom-scroll"></div>
         </div>
         <script src="index.js" type="module"></script>
     </body>
