--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             </div>
             <div class="bottom-scroll"></div>
         </div>
+        <div class="payment-screen">
+            <h3 class="payment-screen-title">Enter card details</h3>
+            <form action="" method="POST" class="payment-screen-form" id="myForm">
+                <input type="text" name="name" id="name" placeholder="Enter your name" required>
+                <input type="text" name="card-number" id="card-number" placeholder="Enter card number" required>
+                <input type="text" name="card-cvv" id="card-cvv" placeholder="enter CVV" required>
+                <button class="pay-btn" type="submit" value="submit">pay</button>
+            </form>
+        </div>
         <script src="index.js" type="module"></script>
     </body>
 </html>
