--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="bottom-scroll"></div>
         </div>
         <div class="payment-screen">
-            <button class="close-btn">🔺</button>
+            <button class="close-btn">X</button>
             <h3 class="payment-screen-title">Enter card details</h3>
             <form action="" method="POST" class="payment-screen-form" id="myForm">
                 <input type="text" name="name" id="name" placeholder="Enter your name" required>
