--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="shopping-cart">
                     
                 </div>
-                <button class="complete-order-btn">complete order</button>
+                <button class="complete-order-btn btn">complete order</button>
             </div>
             <div class="bottom-scroll"></div>
         </div>
@@ -35,7 +35,7 @@
                 <input type="text" name="name" id="name" placeholder="Enter your name" required>
                 <input type="text" name="card-number" id="card-number" placeholder="Enter card number" required>
                 <input type="text" name="card-cvv" id="card-cvv" placeholder="enter CVV" required>
-                <button class="pay-btn" type="submit" value="submit">pay</button>
+                <button class="pay-btn btn" type="submit" value="submit">pay</button>
             </form>
         </div>
         <script src="index.js" type="module"></script>
